Closed
Bug 1134387
Opened 8 years ago
Closed 7 years ago
Intermittent test_eme_playback.html | application crashed [@ mozilla::MP4Reader::UpdateIndex()]
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
Tracking | Status | |
---|---|---|
firefox37 | --- | fixed |
firefox38 | --- | fixed |
firefox39 | --- | fixed |
firefox-esr31 | --- | unaffected |
People
(Reporter: ryanvm, Assigned: jya)
References
(Blocks 2 open bugs)
Details
(Keywords: crash, intermittent-failure)
Attachments
(2 files)
1.88 KB,
patch
|
eflores
:
review+
|
Details | Diff | Splinter Review |
1.89 KB,
patch
|
lmandel
:
approval-mozilla-aurora+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1107767 +++ Maybe a dupe of bug 1107767. Wasn't clear enough for me to say for sure. 11:01:59 INFO - 107 INFO TEST-START | dom/media/test/test_eme_playback.html 11:02:01 INFO - TEST-INFO | Main app process: exit status 1 11:02:01 INFO - 108 INFO gizmo-frag-cencinit.mp4-1 error fetching http://test2.mochi.test:8888/tests/dom/media/test/allowed.sjs?gizmo-frag-cenc1.m4s 11:02:01 INFO - 109 INFO TEST-PASS | dom/media/test/test_eme_playback.html | A valid string reason is expected 11:02:01 INFO - 110 INFO TEST-PASS | dom/media/test/test_eme_playback.html | Reason cannot be empty 11:02:01 INFO - 111 INFO Started Wed Feb 18 2015 11:01:59 GMT-0800 (Pacific Standard Time) (1424286119.86s) 11:02:01 INFO - 112 INFO TEST-PASS | dom/media/test/test_eme_playback.html | [started gizmo-frag-cencinit.mp4-0] Length of array should match number of running tests 11:02:01 INFO - 113 INFO TEST-PASS | dom/media/test/test_eme_playback.html | [started gizmo-frag-cencinit.mp4-1] Length of array should match number of running tests 11:02:01 INFO - 114 INFO [11:02:01.257] gizmo-frag-cencinit.mp4-0 loadstart 11:02:01 INFO - 115 INFO [11:02:01.258] gizmo-frag-cencinit.mp4-0 sourceopen 11:02:01 INFO - 116 INFO [11:02:01.258] gizmo-frag-cencinit.mp4-0 addNextFragment() fetching next fragment gizmo-frag-cencinit.mp4 11:02:01 INFO - 117 INFO [11:02:01.258] gizmo-frag-cencinit.mp4-1 loadstart 11:02:01 INFO - 118 INFO [11:02:01.258] gizmo-frag-cencinit.mp4-1 sourceopen 11:02:01 INFO - 119 INFO [11:02:01.258] gizmo-frag-cencinit.mp4-1 addNextFragment() fetching next fragment http://test2.mochi.test:8888/tests/dom/media/test/allowed.sjs?gizmo-frag-cencinit.mp4 11:02:01 INFO - 120 ERROR TEST-UNEXPECTED-FAIL | dom/media/test/test_eme_playback.html | application terminated with exit code 1 11:02:01 INFO - runtests.py | Application ran for: 0:02:40.934000 11:02:01 INFO - zombiecheck | Reading PID log: c:\users\cltbld\appdata\local\temp\tmpihlnnupidlog 11:02:01 INFO - mozcrash Downloading symbols from: https://ftp-ssl.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-win32-pgo/1424273517/firefox-38.0a1.en-US.win32.crashreporter-symbols.zip 11:02:09 INFO - mozcrash Saved minidump as C:\slave\test\build\blobber_upload_dir\796549e3-0aba-464b-b7b9-4ea1305ae66d.dmp 11:02:09 INFO - mozcrash Saved app info as C:\slave\test\build\blobber_upload_dir\796549e3-0aba-464b-b7b9-4ea1305ae66d.extra 11:02:09 WARNING - PROCESS-CRASH | dom/media/test/test_eme_playback.html | application crashed [@ mozilla::MP4Reader::UpdateIndex()] 11:02:09 INFO - Crash dump filename: c:\users\cltbld\appdata\local\temp\tmpjbwtv3.mozrunner\minidumps\796549e3-0aba-464b-b7b9-4ea1305ae66d.dmp 11:02:09 INFO - Operating system: Windows NT 11:02:09 INFO - 6.1.7601 Service Pack 1 11:02:09 INFO - CPU: x86 11:02:09 INFO - GenuineIntel family 6 model 30 stepping 5 11:02:09 INFO - 8 CPUs 11:02:09 INFO - Crash reason: EXCEPTION_ACCESS_VIOLATION_READ 11:02:09 INFO - Crash address: 0x0 11:02:09 INFO - Thread 77 (crashed) 11:02:09 INFO - 0 xul.dll!mozilla::MP4Reader::UpdateIndex() [MP4Reader.cpp:acf46fe8b054 : 994 + 0x6] 11:02:09 INFO - eip = 0x668acd43 esp = 0x13e4fa68 ebp = 0x13e4fa78 ebx = 0x117b7000 11:02:09 INFO - esi = 0x117b721c edi = 0x117b7000 eax = 0x00000000 ecx = 0x00000000 11:02:09 INFO - edx = 0x0e45d2e0 efl = 0x00010202 11:02:09 INFO - Found by: given as instruction pointer in context 11:02:09 INFO - 1 xul.dll!mozilla::MP4Reader::GetBuffered(mozilla::dom::TimeRanges *) [MP4Reader.cpp:acf46fe8b054 : 1019 + 0x6] 11:02:09 INFO - eip = 0x668ab579 esp = 0x13e4fa80 ebp = 0x13e4fac4 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 2 xul.dll!mozilla::SourceBufferDecoder::GetBuffered(mozilla::dom::TimeRanges *) [SourceBufferDecoder.cpp:acf46fe8b054 : 245 + 0xc] 11:02:09 INFO - eip = 0x6686afc2 esp = 0x13e4facc ebp = 0x13e4fae4 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 3 xul.dll!mozilla::AdjustEndTime [MediaSourceReader.cpp:acf46fe8b054 : 211 + 0xa] 11:02:09 INFO - eip = 0x66867592 esp = 0x13e4faec ebp = 0x13e4fb04 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 4 xul.dll!mozilla::MediaSourceReader::OnAudioNotDecoded(mozilla::MediaDecoderReader::NotDecodedReason) [MediaSourceReader.cpp:acf46fe8b054 : 235 + 0xa] 11:02:09 INFO - eip = 0x6686cdd3 esp = 0x13e4fb0c ebp = 0x13e4fb1c 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 5 xul.dll!mozilla::MediaPromise<__int64,nsresult,1>::ThenValue<mozilla::MediaTaskQueue,mozilla::MediaSourceReader,void ( mozilla::MediaSourceReader::*)(__int64),void ( mozilla::MediaSourceReader::*)(nsresult)>::DoReject(nsresult) [MediaPromise.h:acf46fe8b054 : 294 + 0x8] 11:02:09 INFO - eip = 0x6686978f esp = 0x13e4fb24 ebp = 0x13e4fb2c 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 6 xul.dll!mozilla::MediaPromise<nsRefPtr<mozilla::AudioData>,mozilla::MediaDecoderReader::NotDecodedReason,1>::ThenValueBase::RejectRunnable::Run() [MediaPromise.h:acf46fe8b054 : 180 + 0xa] 11:02:09 INFO - eip = 0x66847081 esp = 0x13e4fb34 ebp = 0x13e4fb3c 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 7 xul.dll!mozilla::MediaTaskQueue::Runner::Run() [MediaTaskQueue.cpp:acf46fe8b054 : 230 + 0x3] 11:02:09 INFO - eip = 0x66847308 esp = 0x13e4fb44 ebp = 0x13e4fb60 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 8 xul.dll!nsThreadPool::Run() [nsThreadPool.cpp:acf46fe8b054 : 225 + 0x5] 11:02:09 INFO - eip = 0x65a3bead esp = 0x13e4fb68 ebp = 0x13e4fb8c 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 9 xul.dll!nsThread::ProcessNextEvent(bool,bool *) [nsThread.cpp:acf46fe8b054 : 855 + 0x5] 11:02:09 INFO - eip = 0x65b5da77 esp = 0x13e4fb94 ebp = 0x13e4fc94 11:02:09 INFO - Found by: call frame info 11:02:09 INFO - 10 xul.dll!NS_ProcessNextEvent(nsIThread *,bool) [nsThreadUtils.cpp:acf46fe8b054 : 265 + 0xa] 11:02:09 INFO - eip = 0x65b5bec3 esp = 0x13e4fc9c ebp = 0x13e4fcb0 11:02:09 INFO - Found by: call frame info
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•8 years ago
|
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 14•8 years ago
|
||
No idea why aDecoder would be nullptr here, but I hit this crash at regular intervals when I run the mochitest and I've had enough.
Attachment #8568469 -
Flags: review?(edwin)
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment on attachment 8568469 [details] [diff] [review] Prevent crash when decoder couldn't be created Review of attachment 8568469 [details] [diff] [review]: ----------------------------------------------------------------- This is just going to turn reds into oranges. r+ but file a follow up bug to fix it properly and set this bug as a blocker on it.
Attachment #8568469 -
Flags: review?(edwin) → review+
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•8 years ago
|
Blocks: eme-platform-uplift
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 29•7 years ago
|
||
remote: https://hg.mozilla.org/integration/mozilla-inbound/rev/c12d73654aa7
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
https://hg.mozilla.org/mozilla-central/rev/c12d73654aa7
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Reporter | ||
Updated•7 years ago
|
status-firefox37:
--- → affected
status-firefox38:
--- → affected
status-firefox-esr31:
--- → unaffected
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 41•7 years ago
|
||
Patch for beta branch as part of EME platform uplift.
Comment 42•7 years ago
|
||
Comment on attachment 8572386 [details] [diff] [review] Beta patch Requesting retroactive approval for Beta landing as part of EME platform uplift.
Flags: needinfo?(cpearce)
Attachment #8572386 -
Flags: approval-mozilla-beta?
Comment 43•7 years ago
|
||
Comment on attachment 8572386 [details] [diff] [review] Beta patch Also need approval for landing on Aurora.
Attachment #8572386 -
Flags: approval-mozilla-aurora?
Assignee | ||
Comment 45•7 years ago
|
||
proper fix is actually in bug 1139380
Comment 46•7 years ago
|
||
Comment on attachment 8572386 [details] [diff] [review] Beta patch Approved for Beta and Aurora as part of EME platform uplift.
Attachment #8572386 -
Flags: approval-mozilla-beta?
Attachment #8572386 -
Flags: approval-mozilla-beta+
Attachment #8572386 -
Flags: approval-mozilla-aurora?
Attachment #8572386 -
Flags: approval-mozilla-aurora+
You need to log in
before you can comment on or make changes to this bug.
Description
•