Bug 1134387: Prevent crash when decoder couldn't be created. r=edwin